--- a/project-webperf.html
+++ b/project-webperf.html
@@ -13,12 +13,12 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/print.css" rel="stylesheet">
 
-    <script>
+    <script async>
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
 
       // Optional TODO: replace with your Google Analytics profile ID.
-      ga('create', 'UA-XXXX-Y');
+      ga('create', 'UA-75247072-6');
       ga('send', 'pageview');
     </script>
     <script src="http://www.google-analytics.com/analytics.js"></script>
