--- a/project-mobile.html
+++ b/project-mobile.html
@@ -21,7 +21,7 @@
       ga('create', 'UA-75247072-5');
       ga('send', 'pageview');
     </script>
-    <script src="http://www.google-analytics.com/analytics.js"></script>
+    <script async src="http://www.google-analytics.com/analytics.js"></script>
     <script async src="js/perfmatters.js"></script>
   </head>
 
