--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ footer span { float: right; font-style: italic; }
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
    <!--  <link href="css/style.css" rel="stylesheet"> -->
     <link href="css/print.css" rel="stylesheet" media="print">
-        <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+       <!--  <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
 
     <script async>
       (function(w,g){w['GoogleAnalyticsObject']=g;
