--- a/project-2048.html
+++ b/project-2048.html
@@ -51,21 +51,20 @@
     </style>
     <link href="css/print.css" rel="stylesheet" media="print">
      <!--    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
-   <!--  <script async>
+    <script async>
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
 
       // Optional TODO: replace with your Google Analytics profile ID.
       ga('create', 'UA-75247072-4');
       ga('send', 'pageview');
-    </script> -->
-   <!--  <script async src="http://www.google-analytics.com/analytics.js"></script> -->
-    <script src="js/perfmatters.js"></script>
+    </script>
+    <script async src="http://www.google-analytics.com/analytics.js"></script>
+    <script async src="js/perfmatters.js"></script>
   </head>
 
   <body>
     <header>
-     <script>document.write(new Date().now())</script>
       <a href="/"><img src="img/profilepic.jpg"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
