--- a/project-2048.html
+++ b/project-2048.html
@@ -51,7 +51,7 @@
     </style>
     <link href="css/print.css" rel="stylesheet" media="print">
      <!--    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
-    <script async>
+    <!-- <script async>
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
 
@@ -59,8 +59,8 @@
       ga('create', 'UA-75247072-4');
       ga('send', 'pageview');
     </script>
-    <script async src="http://www.google-analytics.com/analytics.js"></script>
-    <script async src="js/perfmatters.js"></script>
+    <script async src="http://www.google-analytics.com/analytics.js"></script> -->
+    <script src="js/perfmatters.js"></script>
   </head>
 
   <body>
